# synth-BEng

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/dsp/: Oscilator.cpp  Oscilator.h
